# PDF_Analyzer

./: .gitignore  .readthedocs.yaml  CITATION.cff  Dockerfile  README.md  analyzer.ipynb  codemeta.json  config.json  mkdocs.yml  pyproject.toml  rationale.html  rationale.md  requirements.txt
.github/workflows/: tests.yml
docs/: index.md
example/input/: analysis.html
pdfs/output/: 1123626-Small-Engine.tei.xml  160541-Rivers-Venezuela.tei.xml  3756278-Vietnam-war.tei.xml  3958006-Prosperity-Spain-Latin-America.tei.xml  4571632-Nanotechnology.tei.xml  4673057-European-food-safety.tei.xml  4836450-Agriculture.tei.xml  6624395-Iphone.tei.xml  7258954-World-war-I.tei.xml  7664084-Burj-Khalifa.tei.xml
practica_1/: analyze.py  analyzer.ipynb  example  extract.py  rationale.md
tests/: test_extract.py  tests.ipynb
tests/xmls/: test1.xml  test2.xml  test3.xml  test4.xml  test5.xml
