[tool.poetry]
name = "practica-1"
version = "0.1.0"
description = ""
authors = ["Jesus Hernandez <jesus.hernandezp@alumnos.upm.es>"]
readme = "README.md"
packages = [{include = "practica_1"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
