[tool.poetry]
name = "practica-1"
version = "0.1.0"
description = ""
authors = ["Jesus Hernandez <jesus.hernandezp@alumnos.upm.es>"]
readme = "README.md"
packages = [{include = "practica_1"}]

[tool.poetry.dependencies]
python = "^3.9"
grobid-client = "^0.8.3"
grobid-tei-xml = "^0.1.3"
beautifulsoup4 = "^4.11.2"
lxml = "^4.9.2"
pandas = "^1.5.3"
matplotlib = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
